<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--NFT 상세-->
    <string name="detail_nft_title">제목</string>
    <string name="detail_nft_who_text">소유권 내역</string>
    <string name="detail_nft_detail_title">상세정보 📎</string>
    <string name="detail_nft_price_title">가격</string>
    <string name="detail_nft_link_title">컨트랙트 링크 주소</string>
    <string name="detail_nft_token_title">토큰 ID</string>
    <string name="detail_nft_ownership_title">소유권 내역</string>
    <string name="detail_nft_community_title">커뮤니티 ✋</string>
    <string name="detail_nft_ownership_message">자세히 보기</string>
    
    <!--NFT 상세 Bottom Sheet-->
    <string name="detail_nft_sell">판매하기</string>
    <string name="detail_nft_cancel">마켓에서 내리기</string>
    <string name="detail_nft_remove">NFT 삭제하기</string>
    <string name="detail_nft_hide">NFT 숨기기</string>
    <string name="detail_nft_report">NFT 신고하기</string>

    <string name="community_empty_text">이 NFT에 대한\n이야기를 나눠보세요</string>
    <string name="community_empty_write_button">이 NFT에 대해 글쓰기</string>


</resources>
