<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.dida.nft_detail.DetailOwnerType"/>
        <variable
            name="vm"
            type="com.dida.nft_detail.DetailNftViewModel" />

        <variable
            name="type"
            type="com.dida.nft_detail.DetailOwnerType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bottom_sheet"
        android:orientation="vertical"
        tools:ignore="MissingDefaultResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="32dp"
            android:paddingEnd="24dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sell_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{type == DetailOwnerType.MINE_AND_NOTSALE? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/sell_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sell_text"
                    style="@style/TextView_regular_16_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/detail_nft_sell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sell_img"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{type == DetailOwnerType.MINE_AND_SALE? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/sell_btn">

                <ImageView
                    android:id="@+id/cancel_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cancel_text"
                    style="@style/TextView_regular_16_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/detail_nft_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancel_img"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/remove_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{type != DetailOwnerType.NOTMINE? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@+id/cancel_btn"
                tools:layout_editor_absoluteX="24dp">

                <ImageView
                    android:id="@+id/remove_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/remove_text"
                    style="@style/TextView_regular_16_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/detail_nft_remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/remove_img"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hide_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{type == DetailOwnerType.NOTMINE? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@+id/remove_btn"
                tools:layout_editor_absoluteX="24dp">

                <ImageView
                    android:id="@+id/hide_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_hide"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hide_text"
                    style="@style/TextView_regular_16_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/detail_nft_hide"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hide_img"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/report_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{type == DetailOwnerType.NOTMINE? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@+id/hide_btn"
                tools:layout_editor_absoluteX="24dp">

                <ImageView
                    android:id="@+id/report_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_report"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/report_text"
                    style="@style/TextView_regular_16_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/detail_nft_report"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/report_img"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>