<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.dida.nft_detail.bottom.DetailOwnerType" />

        <variable
            name="vm"
            type="com.dida.nft_detail.DetailNftViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainblack">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:NftDetailToolbar="@{vm.detailNftState}"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/ToolBarStyle" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nft_detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/price_main"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_endLoading="@{vm.detailNftState}">

                <ImageView
                    android:id="@+id/nft_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:NftImgUrl="@{vm.detailNftState}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/nft_example_image" />

                <TextView
                    android:id="@+id/nft_name_txt"
                    NftTitle="@{vm.detailNftState}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nft_img"
                    tools:text="@string/detail_nft_title" />

                <TextView
                    android:id="@+id/nft_detail_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    app:NftDescription="@{vm.detailNftState}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nft_name_txt"
                    tools:text="내용입니다 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,  " />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/user_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/nft_detail_txt"
                    app:onSingleClick="@{() -> vm.onUserProfileClicked()}">

                    <ImageView
                        android:id="@+id/user_img"
                        NftProfileUrl="@{vm.detailNftState}"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/nft_example_image"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/user_name_txt"
                        NftNickName="@{vm.detailNftState}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:fontFamily="@font/pretendard_bold"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        app:layout_constraintBottom_toBottomOf="@id/user_img"
                        app:layout_constraintLeft_toRightOf="@id/user_img"
                        app:layout_constraintTop_toTopOf="@id/user_img"
                        tools:text="user name here" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/whos_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/custom_surface1_radius8"
                        android:padding="12dp"
                        app:layout_constraintBottom_toBottomOf="@id/user_img"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/user_img">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_whos"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toRightOf="@id/whos_txt"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/whos_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pretendard_regular"
                            android:text="@string/detail_nft_who_text"
                            android:textColor="@color/white"
                            android:textSize="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/surface1"
                    app:layout_constraintTop_toBottomOf="@id/user_layout" />

                <TextView
                    android:id="@+id/detail_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/detail_nft_detail_title"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <TextView
                    android:id="@+id/user_link_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:text="@string/detail_nft_link_title"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="@id/detail_txt"
                    app:layout_constraintTop_toBottomOf="@id/detail_txt" />

                <TextView
                    android:id="@+id/user_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/brand_lemon"
                    android:textSize="18dp"
                    app:NftContract="@{vm.detailNftState}"
                    app:layout_constraintBottom_toBottomOf="@id/user_link_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/user_link_txt"
                    app:layout_constraintTop_toTopOf="@id/user_link_txt"
                    tools:text="DEg251...127" />

                <TextView
                    android:id="@+id/user_token_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:text="@string/detail_nft_token_title"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="@id/detail_txt"
                    app:layout_constraintTop_toBottomOf="@id/user_link_txt" />

                <TextView
                    android:id="@+id/user_token"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:textColor="@color/brand_lemon"
                    android:textSize="18dp"
                    app:NftTokenId="@{vm.detailNftState}"
                    app:layout_constraintBottom_toBottomOf="@id/user_token_txt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/user_token_txt"
                    tools:text="Ox01" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/surface1"
                    app:layout_constraintTop_toBottomOf="@id/user_token_txt" />

                <TextView
                    android:id="@+id/community_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/detail_nft_community_title"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line2" />

                <TextView
                    android:id="@+id/community_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:padding="12dp"
                    android:text="@string/more_text"
                    android:textColor="@color/hots_coin_txt"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="@id/community_txt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/community_txt"
                    app:onSingleClick="@{() -> vm.onCommunityMoreClicked()}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/community_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:fillViewport="true"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/community_txt"
                    tools:listitem="@layout/holder_community" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_community_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/brand_lemon"
            android:padding="16dp"
            android:src="@drawable/ic_write"
            android:visibility="gone"
            app:LoginCheck="@{vm.detailNftState}"
            app:layout_constraintBottom_toTopOf="@id/price_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:onSingleClick="@{() -> vm.onCommunityWriteClicked()}"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/price_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/surface3"
            android:padding="16dp"
            app:NftPriceLayout="@{vm.detailOwnerTypeState}"
            app:constraint_endLoading="@{vm.detailNftState}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/price_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_soldout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_txt"
                style="@style/TextView_bold_22_white"
                NftPrice="@{vm.detailNftState}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/next_btn"
                app:layout_constraintStart_toEndOf="@+id/price_img"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="325.91" />

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_brandlemon_radius10"
                style="@style/TextView_bold_18_black"
                android:paddingLeft="60dp"
                android:paddingTop="16dp"
                android:paddingRight="60dp"
                android:paddingBottom="16dp"
                android:text="@string/buy_text"
                app:NftDetailConfirmBtn="@{vm.detailOwnerTypeState}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:onSingleClick="@{() -> vm.onNextButtonClicked()}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/user_shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/price_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startLoading="@{vm.detailNftState}">

            <include layout="@layout/skeleton_detail_nft" />
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

